--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <title>CS1300 JavaScript Studio</title>
     <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cormorant+Garamond&family=Poppins:wght@600&display=swap" rel="stylesheet">
   </head>
 
-  <body>
-    <!-- TODO: ADD HTML FOR WHATEVER YOU WANT TO SHOW ON THE PAGE!  -->
+  <body style="background-color: rgb(207, 230, 202);">
+    <h1>Plants from Year 1753</h1>
+    <button id="control" class = "center" onclick=displayContent()> Show me plants </button>
+    <div id="plants" class="flex-container"> </div>
   </body>
   <script src="app.js"></script>
 </html>
